Fix input text no aligned

--- a/app/globals.css
+++ b/app/globals.css
@@ -285,6 +285,11 @@ button {
 input, textarea, select {
   font-size: 16px;
 }
+.max-height {
+  height: 100% !important;
+  max-height: 100% !important;
+  min-height: 100% !important;
+}
 
 
 
